Accesibilidad: script al final y ajustar contraste

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -428,8 +428,8 @@ body.dislexia {
 body.contraste {
   --fondo: #000;
   --texto: #fff;
-  --primario: #fff;
-  --secundario: #f2f2f2;
+  --primario: #111;      
+  --secundario: #ddd;
   --acento: #ffdd57;
 }
 
