Corregidos enlaces del footer y contraste cookies

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -432,5 +432,14 @@ body.contraste {
   --secundario: #ddd;
   --acento: #ffdd57;
 }
+.banner-cookies {
+  background: #000;
+  color: #fff;
+}
+
+.banner-cookies a {
+  color: #ffdd57; 
+}
+
 
 
