--- a/css/estilos.css
+++ b/css/estilos.css
@@ -415,8 +415,8 @@ body.dislexia {
   position: absolute;
   left: -999px;
   top: -999px;
-  background: var(--acento);
-  color: var(--blanco);
+  background: #000;
+  color: #fff;
   padding: 0.5rem;
   z-index: 9999;
 }
@@ -425,6 +425,7 @@ body.dislexia {
   left: 1rem;
   top: 1rem;
 }
+
 body.contraste {
   --fondo: #000;
   --texto: #fff;
@@ -440,6 +441,10 @@ body.contraste {
 .banner-cookies a {
   color: #ffdd57; 
 }
+.banner-cookies button {
+  color: #000;
+}
+
 
 
 
